kubernetes/network-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-sit-to-node-app
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: node-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
